--- a/agent-service/src/main/resources/application.yaml
+++ b/agent-service/src/main/resources/application.yaml
@@ -1,3 +1,13 @@
-spring:
-  application:
-    name: agent-service
+server:
+  port: 8080
+
+mcp:
+  tools:
+    base-url: http://localhost:8081
+  registry:
+    default-ttl-seconds: 300
+  call:
+    timeout-ms: 1200
+    max-retries: 1
+  debug:
+    allow-explicit-tool: true
