--- a/agent-tools-service/pom.xml
+++ b/agent-tools-service/pom.xml
@@ -87,6 +87,12 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+	
+		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>agent-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
