Implement MCP Tool Directory and Invocation Framework
- Add MCP protocol support with tool discovery and invocation
- Implement tool registry client for managing MCP tools
- Add streaming answer orchestration with tool execution
- Refactor package structure from com.example to com.mrpot
- Add comprehensive SSE (Server-Sent Events) support
- Include tool invoker with retry and error handling mechanisms

--- a/agent-service/src/test/resources/application.yaml
+++ b/agent-service/src/test/resources/application.yaml
@@ -4,3 +4,16 @@ spring:
   ai:
     openai:
       api-key: test-api-key-for-testing-only
+server:
+  port: 0
+
+mcp:
+  tools:
+    base-url: http://localhost:8081
+  registry:
+    default-ttl-seconds: 300
+  call:
+    timeout-ms: 1200
+    max-retries: 1
+  debug:
+    allow-explicit-tool: true
