--- a/agent-tools-service/pom.xml
+++ b/agent-tools-service/pom.xml
@@ -26,6 +26,11 @@
 	</scm>
 	<dependencies>
 		<dependency>
+			<groupId>com.example</groupId>
+			<artifactId>agent-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
@@ -60,6 +65,10 @@
 		<dependency>
 			<groupId>org.springframework.ai</groupId>
 			<artifactId>spring-ai-starter-vector-store-pgvector</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 		</dependency>
 
 		<dependency>
