--- a/agent-tools-service/src/main/resources/application.yaml
+++ b/agent-tools-service/src/main/resources/application.yaml
@@ -1,3 +1,49 @@
 spring:
   application:
     name: agent-tools-service
+  
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://centerbeam.proxy.rlwy.net:27055/railway}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: true
+    show-sql: false
+  
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
+      chat:
+        options:
+          model: ${OPENAI_CHAT_MODEL:gpt-4.1-mini}
+          temperature: ${OPENAI_TEMPERATURE:0.3}
+      embedding:
+        options:
+          model: ${OPENAI_EMBEDDING_MODEL:text-embedding-3-small}
+          dimensions: ${OPENAI_EMBEDDING_DIMENSIONS:1536}
+    
+    deepseek:
+      api-key: ${DEEPSEEK_API_KEY}
+      base-url: ${DEEPSEEK_BASE_URL:https://api.deepseek.com}
+      chat:
+        options:
+          model: ${DEEPSEEK_CHAT_MODEL:deepseek-chat}
+          temperature: ${DEEPSEEK_TEMPERATURE:0.2}
+    
+    dashscope:
+      base-url: ${DASHSCOPE_BASE_URL:https://dashscope-intl.aliyuncs.com/compatible-mode/v1}
+      api-key: ${DASHSCOPE_API_KEY}
+      chat:
+        options:
+          model: ${DASHSCOPE_CHAT_MODEL:qwen-vl-plus}
+          temperature: ${QWEN_TEMPERATURE:0.1}
+          max-tokens: ${QWEN_MAX_TOKENS:2048}
+
+server:
+  port: 8081
