feat: file URL extraction and context fusion
- Implement QwenVlFlashClient for Qwen VL API integration with Bearer token authentication
- Add AlibabaConfig for DashScope credentials and file processing configuration
- Create AttachmentService with file understanding via Qwen VL multimodal model
- Add FileUnderstanding and FileItem data models for content extraction
- Integrate RagAnswerService for context fusion with retrieved file content
- Support image, PDF, and text file extraction with auto-generated keywords and queries
- Configure proper YAML settings for DashScope API endpoint and authentication
- Add MCP tool registration for file.understandUrl functionality
- Clean up debug logging for production readiness

--- a/agent-service/src/main/resources/application.yaml
+++ b/agent-service/src/main/resources/application.yaml
@@ -136,11 +136,16 @@ app:
 
 mcp:
   tools:
-    base-url: http://localhost:8081
+    base-url: ${TOOLS_SERVICE_URL:http://localhost:8081}
   registry:
     default-ttl-seconds: 300
   call:
-    timeout-ms: 1200
+    timeout-ms: 30000
     max-retries: 1
   debug:
     allow-explicit-tool: true
+
+file:
+  max-urls: 3
+  attach-timeout-seconds: 30
+  max-concurrent: 2
