Implement KB retrieval backend with pgvector and MCP tools
- Add KB document models (KbDocumentEntity, ScoredDocument)
- Implement KbDocumentVectorRepository for pgvector similarity search
- Create KbRetrievalService with Spring AI embedding integration
- Add KbController REST endpoints for search and document retrieval
- Implement MCP tools (KbSearchTool, KbGetDocumentTool)
- Create KbServiceClient for inter-service communication
- Add SQL schema and 10 sample documents for testing
- Write comprehensive unit and integration tests
- Disable integration tests by default (require PostgreSQL with pgvector)
- Update dependencies: pgvector, JDBC, PostgreSQL driver

--- a/agent-common/pom.xml
+++ b/agent-common/pom.xml
@@ -47,6 +47,12 @@
 		<groupId>org.springdoc</groupId>
 		<artifactId>springdoc-openapi-starter-common</artifactId>
 	</dependency>
+		<!-- pgvector for vector database support -->
+		<dependency>
+			<groupId>com.pgvector</groupId>
+			<artifactId>pgvector</artifactId>
+			<version>0.1.5</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
