--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@ DB_URL=jdbc:postgresql://your-host:port/database
 DB_USERNAME=postgres
 DB_PASSWORD=your_database_password
 
+# RabbitMQ Configuration
+RABBITMQ_URL=amqp://username:password@your-host:port
+RABBITMQ_USER=your_rabbitmq_username
+RABBITMQ_PASS=your_rabbitmq_password
+
 # Redis Configuration
 REDIS_URL=redis://default:your_redis_password@your-host:port
 
