--- a/agent-tools-service/src/main/resources/application.yaml
+++ b/agent-tools-service/src/main/resources/application.yaml
@@ -53,3 +53,12 @@ agent:
 
 server:
   port: 8081
+
+# === Swagger UI / OpenAPI Documentation ===
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
