--- a/agent-telemetry-service/src/test/resources/application.yaml
+++ b/agent-telemetry-service/src/test/resources/application.yaml
@@ -12,6 +12,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
 
