Enable OpenAI vision for extraction

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,12 @@ QWEN_TEMPERATURE=0.1
 QWEN_MAX_TOKENS=2048
 QWEN_ENABLE_THINKING=false
 
+# Vision Model Configuration for File Content Extraction
+# Options: "qwen-vl" (default) or "openai"
+# "qwen-vl" uses Alibaba DashScope Qwen VL model
+# "openai" uses OpenAI Vision API (gpt-4o-mini)
+VISION_PROVIDER=qwen-vl
+
 # PGVector Configuration
 PGVECTOR_DIMENSIONS=1536
 
