--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,22 @@ ELASTIC_PASSWORD=your_elastic_password
 ELASTIC_STORE_TO_ES=true
 ELASTIC_ES_SYNC=true
 ELASTIC_ES_INDEX=mrpot_candidates
+
+# =====================================================
+# Docker Configuration (for docker-compose)
+# =====================================================
+# When using docker-compose, these values are automatically set
+# in the compose file. Only API keys need to be provided here.
+#
+# Local Docker (docker-compose up):
+#   DB_URL=jdbc:postgresql://postgres:5432/aiagent
+#   REDIS_URL=redis://redis:6379
+#   RABBITMQ_URL=amqp://aiagent:aiagent_pwd@rabbitmq:5672
+#   ELASTIC_BASE_URL=http://elasticsearch:9200
+#   TOOLS_SERVICE_URL=http://agent-tools-service:8081
+#
+# Required API Keys for Docker:
+#   DEEPSEEK_API_KEY=your_deepseek_api_key
+#   OPENAI_API_KEY=your_openai_api_key (optional)
+#   GEMINI_API_KEY=your_gemini_api_key (optional)
+#   DASHSCOPE_API_KEY=your_dashscope_api_key (for Qwen VL)
