--- a/agent-knowledge/src/main/resources/application.yaml
+++ b/agent-knowledge/src/main/resources/application.yaml
@@ -1,3 +1,44 @@
 spring:
   application:
     name: agent-knowledge
+
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/aiagent}
+    username: ${DB_USERNAME:aiagent}
+    password: ${DB_PASSWORD:aiagent_pwd}
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 2
+      connection-timeout: 30000
+
+server:
+  port: ${PORT:8083}
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: when_authorized
+
+cors:
+  allowed-origins: ${CORS_ALLOWED_ORIGINS:*}
+  allowed-methods: [GET, POST, PUT, DELETE, PATCH, OPTIONS]
+  allowed-headers: ["*"]
+  allow-credentials: false
+
+logging:
+  level:
+    com.mrpot.agent.knowledge: DEBUG
+    org.springframework.jdbc: DEBUG
