--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -183,6 +183,26 @@ services:
     networks:
       - aiagent-network
 
+  agent-knowledge:
+    build: { context: ., dockerfile: agent-knowledge/Dockerfile }
+    container_name: aiagent-knowledge
+    profiles: ["app"]
+    ports: ["8083:8083"]
+    environment:
+      DB_URL: jdbc:postgresql://postgres:5432/aiagent
+      DB_USERNAME: aiagent
+      DB_PASSWORD: aiagent_pwd
+      JAVA_OPTS: "-Xms256m -Xmx512m"
+    depends_on:
+      postgres: { condition: service_healthy }
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8083/actuator/health"]
+      interval: 30s
+      timeout: 10s
+      start_period: 60s
+      retries: 3
+    networks: [aiagent-network]
+
   agent-telemetry-service:
     build:
       context: .
