--- a/agent-knowledge/src/main/resources/application.yaml
+++ b/agent-knowledge/src/main/resources/application.yaml
@@ -2,6 +2,9 @@ spring:
   application:
     name: agent-knowledge
 
+cors:
+  allowed-origins: "*"
+
   datasource:
     url: ${DB_URL:jdbc:postgresql://centerbeam.proxy.rlwy.net:27055/railway}
     username: ${DB_USERNAME:postgres}
