--- a/agent-knowledge-ui/package.json
+++ b/agent-knowledge-ui/package.json
@@ -15,7 +15,8 @@
     "firebase": "^11.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.1"
+    "react-router-dom": "^7.6.1",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
