--- a/agent-knowledge-ui/Dockerfile
+++ b/agent-knowledge-ui/Dockerfile
@@ -15,33 +15,14 @@ COPY agent-knowledge-ui/package*.json ./
 # Install dependencies
 RUN npm ci --silent
 
-# Copy source code
+# Copy source code (includes .env.production for Vite)
 COPY agent-knowledge-ui/ ./
 
-# Build arguments for environment variables
-ARG VITE_API_BASE_URL=http://localhost:8080
-ARG VITE_TELEMETRY_API_BASE_URL=http://localhost:8082
-ARG VITE_FIREBASE_API_KEY=""
-ARG VITE_FIREBASE_AUTH_DOMAIN=""
-ARG VITE_FIREBASE_PROJECT_ID=""
-ARG VITE_FIREBASE_STORAGE_BUCKET=""
-ARG VITE_FIREBASE_MESSAGING_SENDER_ID=""
-ARG VITE_FIREBASE_APP_ID=""
-ARG VITE_FIREBASE_MEASUREMENT_ID=""
+# Set NODE_ENV for Vite to use .env.production
+ENV NODE_ENV=production
 
-# Set environment variables for build
-ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
-ENV VITE_TELEMETRY_API_BASE_URL=$VITE_TELEMETRY_API_BASE_URL
-ENV VITE_FIREBASE_API_KEY=$VITE_FIREBASE_API_KEY
-ENV VITE_FIREBASE_AUTH_DOMAIN=$VITE_FIREBASE_AUTH_DOMAIN
-ENV VITE_FIREBASE_PROJECT_ID=$VITE_FIREBASE_PROJECT_ID
-ENV VITE_FIREBASE_STORAGE_BUCKET=$VITE_FIREBASE_STORAGE_BUCKET
-ENV VITE_FIREBASE_MESSAGING_SENDER_ID=$VITE_FIREBASE_MESSAGING_SENDER_ID
-ENV VITE_FIREBASE_APP_ID=$VITE_FIREBASE_APP_ID
-ENV VITE_FIREBASE_MEASUREMENT_ID=$VITE_FIREBASE_MEASUREMENT_ID
-
-# Build the application
-RUN npm run build
+# Build the application (explicitly use production mode to load .env.production)
+RUN npm run build -- --mode production
 
 # ---------- Runtime stage (nginx) ----------
 FROM nginx:alpine
@@ -49,18 +30,22 @@ FROM nginx:alpine
 # Remove default nginx config
 RUN rm /etc/nginx/conf.d/default.conf
 
-# Copy custom nginx config
+# Copy custom nginx config (for local/docker-compose use)
 COPY agent-knowledge-ui/nginx.conf /etc/nginx/conf.d/default.conf
+
+# Copy entrypoint script for Railway (uses PORT env var)
+COPY agent-knowledge-ui/docker-entrypoint.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # Copy built static files
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Expose port
+# Expose port (Railway will set PORT env var)
 EXPOSE 80
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=10s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:80/ || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-80}/ || exit 1
 
-# Run nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Use entrypoint that handles PORT env var
+ENTRYPOINT ["/docker-entrypoint.sh"]
