Implement Grafana and Prometheus Monitoring for AI Agent Platform

--- a/agent-telemetry-service/src/main/resources/application.yaml
+++ b/agent-telemetry-service/src/main/resources/application.yaml
@@ -66,7 +66,10 @@ management:
   endpoints:
     web:
       exposure:
-        include: health,info
+        include: health,info,prometheus
+  endpoint:
+    health:
+      show-details: when_authorized
 
 # === Logging ===
 logging:
