--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -242,6 +242,53 @@ services:
     networks:
       - aiagent-network
 
+  # ==================== Monitoring ====================
+
+  prometheus:
+    image: prom/prometheus:v2.51.0
+    container_name: aiagent-prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - prometheus_data:/prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--web.console.libraries=/etc/prometheus/console_libraries'
+      - '--web.console.templates=/etc/prometheus/consoles'
+      - '--web.enable-lifecycle'
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - aiagent-network
+
+  grafana:
+    image: grafana/grafana:10.4.1
+    container_name: aiagent-grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning:ro
+    depends_on:
+      prometheus:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3000/api/health || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    networks:
+      - aiagent-network
+
 # ==================== Networks ====================
 networks:
   aiagent-network:
@@ -258,4 +305,8 @@ volumes:
     name: aiagent-rabbit-data
   es_data:
     name: aiagent-es-data
+  prometheus_data:
+    name: aiagent-prometheus-data
+  grafana_data:
+    name: aiagent-grafana-data
 
