--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,14 @@ VISION_PROVIDER=qwen-vl
 # PGVector Configuration
 PGVECTOR_DIMENSIONS=1536
 
+# S3/Tigris Storage Configuration
+S3_ENDPOINT=https://t3.storageapi.dev
+S3_REGION=auto
+S3_BUCKET=your_bucket_name
+S3_ACCESS_KEY=your_s3_access_key
+S3_SECRET_KEY=your_s3_secret_key
+S3_PRESIGN_TTL_SECONDS=900
+
 # Server Configuration
 PORT=8080
 
