--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,10 @@ Thumbs.db
 .env
 .env.local
 .env.*.local
+.env.production
+
+# Docker config files with credentials
+**/application-docker.yml
 
 # Local Development
 logs/
