--- a/agent-knowledge/pom.xml
+++ b/agent-knowledge/pom.xml
@@ -36,6 +36,19 @@
 			<version>${project.version}</version>
 		</dependency>
 
+		<!-- Spring AI for embeddings (OpenAI) -->
+		<dependency>
+			<groupId>org.springframework.ai</groupId>
+			<artifactId>spring-ai-starter-model-openai</artifactId>
+		</dependency>
+
+		<!-- AWS SDK v2 for S3 / presigned URLs (Tigris endpoint compatible) -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.24.12</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
