--- a/agent-knowledge/src/test/resources/application.yaml
+++ b/agent-knowledge/src/test/resources/application.yaml
@@ -8,3 +8,42 @@ spring:
     init:
       mode: always
       schema-locations: classpath:schema-h2.sql
+
+  # Disable RabbitMQ for tests
+  rabbitmq:
+    addresses: amqp://localhost:5672
+    username: guest
+    password: guest
+  autoconfigure:
+    exclude:
+      - org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
+      - org.springframework.boot.autoconfigure.data.redis.RedisAutoConfiguration
+      - org.springframework.ai.autoconfigure.openai.OpenAiAutoConfiguration
+
+  ai:
+    openai:
+      api-key: test-key
+      embedding:
+        options:
+          model: text-embedding-3-small
+          dimensions: 1536
+
+  cache:
+    type: none
+
+server:
+  port: 0
+
+storage:
+  s3:
+    endpoint: https://test.local
+    region: auto
+    bucket: test-bucket
+    access-key: test-access-key
+    secret-key: test-secret-key
+    presign-ttl-seconds: 900
+    path-style: true
+
+mcp:
+  tools:
+    base-url: http://localhost:8081
