--- a/agent-service/Dockerfile
+++ b/agent-service/Dockerfile
@@ -55,9 +55,9 @@ ENV JAVA_OPTS="-Xms512m -Xmx1024m" \
 # Expose port
 EXPOSE 8080
 
-# Health check
+# Health check (uses PORT env var set by Railway)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8080}/actuator/health || exit 1
 
 # Run the application
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar app.jar"]
