--- a/agent-knowledge/Dockerfile
+++ b/agent-knowledge/Dockerfile
@@ -53,11 +53,11 @@ ENV JAVA_OPTS="-Xms256m -Xmx512m" \
     SPRING_PROFILES_ACTIVE="docker"
 
 # Expose port (documentation only - Railway uses PORT env var)
-EXPOSE 8083
+EXPOSE 8080
 
-# Health check - uses PORT env var set by Railway, falls back to 8083
+# Health check (uses PORT env var set by Railway)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8083}/actuator/health || exit 1
+    CMD sh -c "wget --no-verbose --tries=1 --spider http://localhost:\${PORT:-8080}/actuator/health || exit 1"
 
 # Run the application
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar app.jar"]
