Bug fix for the service's port

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,6 +41,7 @@ services:
     env_file:
       - .env
     environment:
+      PORT: 8081
       AGENT_SERVICE_URL: http://agent-service:8080
       JAVA_OPTS: "-Xms256m -Xmx512m"
       SPRING_PROFILES_ACTIVE: docker
@@ -62,6 +63,7 @@ services:
     env_file:
       - .env
     environment:
+      PORT: 8082
       JAVA_OPTS: "-Xms256m -Xmx512m"
       SPRING_PROFILES_ACTIVE: docker
     healthcheck:
@@ -82,6 +84,7 @@ services:
     env_file:
       - .env
     environment:
+      PORT: 8083
       JAVA_OPTS: "-Xms256m -Xmx512m"
       SPRING_PROFILES_ACTIVE: docker
     healthcheck:
