chore: update tests, config, and KB controller
- Update RagAnswerRequestTest to reflect API changes
- Add KB service URL to telemetry service application.yaml
- Add test for enrichment fields in TraceQueryControllerWithNewFieldsTest
- Add debug logging to KB controller for document queries

--- a/agent-telemetry-service/src/main/resources/application.yaml
+++ b/agent-telemetry-service/src/main/resources/application.yaml
@@ -41,6 +41,11 @@ app:
     base-url: ${ELASTIC_BASE_URL:https://elasticsearch-production-361a.up.railway.app}
     username: ${ELASTIC_USERNAME:mrpot}
     password: ${ELASTIC_PASSWORD:}
+
+# === KB Service Client Configuration ===
+kb:
+  service:
+    url: ${KB_SERVICE_URL:http://agent-knowledge:8083}
   
   # === ES Outbox Worker Configuration ===
   es-outbox:
